--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import './components/address';
 @import './components/invite';
 @import './components/modal';
+@import './components/filter';
+@import './components/example';
