--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -153,10 +153,6 @@
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
-
-    &:checked+.check__icon {
-        background-color: $hover-tet-color;
-    }
 }
 
 .modal__check-icon {
@@ -170,13 +166,17 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal__checkbox:checked + .modal__check-icon {
+    background-color: $hover-tet-color;
+}
+
 .modal__link-agreement {
     color: $hover-tet-color;
 }
 
-// .modal__checkbox:checked + .check__icon {
-//     background-color: $hover-tet-color;
-// }
+.modal__checkbox:checked + .modal__check-icon {
+    background-color: $hover-tet-color;
+}
 
 .modal__button {
     width: 200px;
